tests/NormalTests/paczka1/fuzzy1/11356821.err
Error in line 1: GBcXFop S556 58,0
Error in line 3: ePmF S284 63,3
Error in line 20: GBcXFop A455 64,6
Error in line 8: 8xNrB S284 75,4
